2018-04-06  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added UTF8 output

2018-04-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added debugging output for cURL

2018-03-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug introduced in the last verstion

2018-03-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Removed cURL dependency when not checking SSL Labs

2018-03-17  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added support for TLS 1.3

2018-03-06  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed OCSP check with LibreSSL
	* check_ssl_cert: Lists the number or default root certificates in debug mode

2018-01-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug processing more than one OCSP host

2017-12-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug in the specification of the xmpphost parameter

2017-12-14  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added an option to specify the 'to' attribute of the XMPP stream element

2017-11-29  Wim van Ravesteijn https://github.com/wimvr

	* check_ssl_cert: Support for DER encoded CRL files

2017-11-28  Georg https://github.com/gbotti

	* check_ssl_cert: added --fingerprint to check the SHA1 fingerprint of the certificate

2017-11-17  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): adding support for -xmpphost if available

2017-11-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): fixing XMPP support

2017-11-16    <corti@corti.li>

	* check_ssl_cert (fetch_certificate): adding support for IPv6 addresses

2017-09-18 Bernd Stroessenreuther <booboo@gluga.de>

	* check_ssl_cert: with -f option you now can also pass a certificate revocation list (CRL) to check its validity period

2017-09-10  Matteo Corti  <corti@mac-mini-1.home>

	* check_ssl_cert: OCSP check is now terminated by a timeout

2017-09-09  Matteo Corti  <matteo@corti.li>
